# Todo4Learn

./: .gitignore  AD.drawio  CMakeLists.txt  DataBase.drawio  README.md  appseting.cpp  appseting.h  main.cpp
DesignDocuments/: AD.drawio
Source/: CMakeLists.txt  Login.qml  Main.qml  Parameter.h  appseting.h  databasecontrol.cpp  databasecontrol.h  main.cpp  processor.cpp  processor.h  savelogin.cpp  savelogin.h  taskcontrol.cpp  taskcontrol.h  view.cpp  view.h
source/: CMakeLists.txt  main.cpp
